million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -17243,4 +17243,60 @@
                     <p>ちょっぴり開放的に　エミリー (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.1875" idol_id="4" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1560/">
+                    <img src="img/gree_1560_nf.jpg">
+                    <p>熾天使ｶﾞﾌﾞﾘｴﾙ 萩原雪歩</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2454">
+                    <img src="img/td_2454_0_nf.jpg">
+                    <p>おしおき堕天使　萩原雪歩 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1484375" idol_id="4" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1561/">
+                    <img src="img/gree_1561_nf.jpg">
+                    <p>おしおき堕天使 萩原雪歩</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2454">
+                    <img src="img/td_2454_1_nf.jpg">
+                    <p>おしおき堕天使　萩原雪歩 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="31" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2255/">
+                    <img src="img/gree_2255_nf.jpg">
+                    <p>涼しげな微笑み 天空橋朋花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2455">
+                    <img src="img/td_2455_0_nf.jpg">
+                    <p>カリスマ天使長　天空橋朋花 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="31" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1558/">
+                    <img src="img/gree_1558_nf.jpg">
+                    <p>ｶﾘｽﾏ天使長 天空橋朋花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2455">
+                    <img src="img/td_2455_1_nf.jpg">
+                    <p>カリスマ天使長　天空橋朋花 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
