million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -17299,4 +17299,116 @@
                     <p>カリスマ天使長　天空橋朋花 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.2109375" idol_id="13" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1797/">
+                    <img src="img/gree_1797_nf.jpg">
+                    <p>ﾜｲﾙﾄﾞに入場! 我那覇響</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2463">
+                    <img src="img/td_2463_0_nf.jpg">
+                    <p>美ら花火　我那覇響 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.265625" idol_id="13" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1798/">
+                    <img src="img/gree_1798_nf.jpg">
+                    <p>美ら花火 我那覇響</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2463">
+                    <img src="img/td_2463_1_nf.jpg">
+                    <p>美ら花火　我那覇響 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.2109375" idol_id="8" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card579/">
+                    <img src="img/gree_579_nf.jpg">
+                    <p>妖魔のｽﾃｰｼﾞ 四条貴音</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2478">
+                    <img src="img/td_2478_0_nf.jpg">
+                    <p>はにかみ帰り道　四条貴音 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.359375" idol_id="8" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card580/">
+                    <img src="img/gree_580_nf.jpg">
+                    <p>はにかみ帰り道 四条貴音</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2478">
+                    <img src="img/td_2478_1_nf.jpg">
+                    <p>はにかみ帰り道　四条貴音 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="23" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card577/">
+                    <img src="img/gree_577_nf.jpg">
+                    <p>どっきりﾌﾗｲﾄ 野々原茜</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2479">
+                    <img src="img/td_2479_0_nf.jpg">
+                    <p>ときにはしょんぼり　野々原茜 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="23" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card578/">
+                    <img src="img/gree_578_nf.jpg">
+                    <p>ときにはしょんぼり 野々原茜</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2479">
+                    <img src="img/td_2479_1_nf.jpg">
+                    <p>ときにはしょんぼり　野々原茜 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.046875" idol_id="28" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card572/">
+                    <img src="img/gree_572_nf.jpg">
+                    <p>遭遇！怪奇現象 松田亜利沙</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2480">
+                    <img src="img/td_2480_0_nf.jpg">
+                    <p>百獣の王アピール！　松田亜利沙 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="28" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1676/">
+                    <img src="img/gree_1676_nf.jpg">
+                    <p>百獣の王ｱﾋﾟ-ﾙ! 松田亜利沙</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2480">
+                    <img src="img/td_2480_1_nf.jpg">
+                    <p>百獣の王アピール！　松田亜利沙 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
