million: update data

--- a/million/ssr/index.html
+++ b/million/ssr/index.html
@@ -6613,4 +6613,52 @@ body, div, a {
                     <img src="img/td_2475 002chi0484_1.jpg">
                 </a>
             </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2481">
+                    <img src="img/td_2481 049mom0544_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2481">
+                    <img src="img/td_2481 049mom0544_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2482">
+                    <img src="img/td_2482 043nor0454_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2482">
+                    <img src="img/td_2482 043nor0454_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2494">
+                    <img src="img/td_2494 028ari0514_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2494">
+                    <img src="img/td_2494 028ari0514_1.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="parent">
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2495">
+                    <img src="img/td_2495 011ami0414_0.jpg">
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2495">
+                    <img src="img/td_2495 011ami0414_1.jpg">
+                </a>
+            </div>
         </div></body></html>
