million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -17411,4 +17411,88 @@
                     <p>百獣の王アピール！　松田亜利沙 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="16" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card591/">
+                    <img src="img/gree_591_nf.jpg">
+                    <p>ｱｲﾄﾞﾙ捕獲成功! 伊吹翼</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2516">
+                    <img src="img/td_2516_0_nf.jpg">
+                    <p>スターライトステージ　伊吹翼 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="16" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card592/">
+                    <img src="img/gree_592_nf.jpg">
+                    <p>ｽﾀ-ﾗｲﾄｽﾃ-ｼﾞ 伊吹翼</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2516">
+                    <img src="img/td_2516_1_nf.jpg">
+                    <p>スターライトステージ　伊吹翼 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.203125" idol_id="13" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card589/">
+                    <img src="img/gree_589_nf.jpg">
+                    <p>ﾊﾂﾗﾂ騎馬大将 我那覇響</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2517">
+                    <img src="img/td_2517_0_nf.jpg">
+                    <p>ハツラツ騎馬大将　我那覇響 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.25" idol_id="13" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card590/">
+                    <img src="img/gree_590_nf.jpg">
+                    <p>Next Life 我那覇響</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2517">
+                    <img src="img/td_2517_1_nf.jpg">
+                    <p>ハツラツ騎馬大将　我那覇響 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.03125" idol_id="49" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card584/">
+                    <img src="img/gree_584_nf.jpg">
+                    <p>風船ﾊﾟﾆｯｸ 周防桃子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2518">
+                    <img src="img/td_2518_0_nf.jpg">
+                    <p>プリティダンサー　周防桃子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="49" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2199/">
+                    <img src="img/gree_2199_nf.jpg">
+                    <p>ﾌﾟﾘﾃｨﾀﾞﾝｻ- 周防桃子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2518">
+                    <img src="img/td_2518_1_nf.jpg">
+                    <p>プリティダンサー　周防桃子 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
