million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -17495,4 +17495,60 @@
                     <p>プリティダンサー　周防桃子 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="27" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2952/">
+                    <img src="img/gree_2952_nf.jpg">
+                    <p>雷雲の竜姫 高山紗代子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2522">
+                    <img src="img/td_2522_0_nf.jpg">
+                    <p>光芒射す雷竜　高山紗代子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="27" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2953/">
+                    <img src="img/gree_2953_nf.jpg">
+                    <p>光芒射す雷竜 高山紗代子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2522">
+                    <img src="img/td_2522_1_nf.jpg">
+                    <p>光芒射す雷竜　高山紗代子 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.234375" idol_id="7" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1253/">
+                    <img src="img/gree_1253_nf.jpg">
+                    <p>慌ただしい女王ﾊﾞﾁ 水瀬伊織</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2523">
+                    <img src="img/td_2523_0_nf.jpg">
+                    <p>祈りの歌　水瀬伊織 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.28125" idol_id="7" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1412/">
+                    <img src="img/gree_1412_nf.jpg">
+                    <p>祈りの歌 水瀬伊織</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2523">
+                    <img src="img/td_2523_1_nf.jpg">
+                    <p>祈りの歌　水瀬伊織 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
