million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -17551,4 +17551,116 @@
                     <p>祈りの歌　水瀬伊織 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.03125" idol_id="48" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3006/">
+                    <img src="img/gree_3006_nf.jpg">
+                    <p>うきうき南国ﾄﾞﾗｲﾌﾞ 北上麗花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2530">
+                    <img src="img/td_2530_0_nf.jpg">
+                    <p>うきうき南国ドライブ　北上麗花 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="48" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3007/">
+                    <img src="img/gree_3007_nf.jpg">
+                    <p>ｻﾏ☆ﾄﾘ～Summer trip～ 北上麗花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2530">
+                    <img src="img/td_2530_1_nf.jpg">
+                    <p>うきうき南国ドライブ　北上麗花 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.3125" idol_id="6" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1437/">
+                    <img src="img/gree_1437_nf.jpg">
+                    <p>ｽｲ-ﾂorｿｳﾙ 菊地真</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2542">
+                    <img src="img/td_2542_0_nf.jpg">
+                    <p>死神プリンセス　菊地真 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1953125" idol_id="6" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1438/">
+                    <img src="img/gree_1438_nf.jpg">
+                    <p>死神ﾌﾟﾘﾝｾｽ 菊地真</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2542">
+                    <img src="img/td_2542_1_nf.jpg">
+                    <p>死神プリンセス　菊地真 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.21875" idol_id="3" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2549/">
+                    <img src="img/gree_2549_nf.jpg">
+                    <p>ﾊｯﾋﾟ-ﾊﾛｳｨﾝﾄﾞ-ﾙ 星井美希</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2543">
+                    <img src="img/td_2543_0_nf.jpg">
+                    <p>ハッピーハロウィンドール　星井美希 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.2265625" idol_id="3" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2550/">
+                    <img src="img/gree_2550_nf.jpg">
+                    <p>ﾏﾘｵﾈｯﾄの心 星井美希</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2543">
+                    <img src="img/td_2543_1_nf.jpg">
+                    <p>ハッピーハロウィンドール　星井美希 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="33" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2164/">
+                    <img src="img/gree_2164_nf.jpg">
+                    <p>甘いとまどい 北沢志保</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2544">
+                    <img src="img/td_2544_0_nf.jpg">
+                    <p>ウェルカムバルーン　北沢志保 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="33" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2007/">
+                    <img src="img/gree_2007_nf.jpg">
+                    <p>ｳｪﾙｶﾑﾊﾞﾙ-ﾝ 北沢志保</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2544">
+                    <img src="img/td_2544_1_nf.jpg">
+                    <p>ウェルカムバルーン　北沢志保 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
